--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,9 @@
 
                 <!--<p><i>Screwdriver</i></p>-->
                 <div class="linkWrapper" style="position: relative;">
-                    <button
+                    <button onclick="window.open('https://punchlove.bandcamp.com/album/channels');"
                             id="vizButton">
-                        <i>Channels</i> Coming Soon
+                        Preorder <i>Channels</i> Here
                     </button>
                 </div>
             </div>            
