--- a/public/frontPage.html
+++ b/public/frontPage.html
@@ -42,11 +42,9 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
         </div>
 
         <section class="textBox">
-            <div class="text">
+            <div class="imgFrame">
                 <a href="redirect.html">
-                    <marquee behavior="scroll" direction="down">
-                        <img src="img/punchlove_logo_victoriawinter_top.png" width="100%" height="100%" />
-                    </marquee>
+                    <img src="img/gif/birdsong-square.gif" width="100%" height="100%" />                    
                 </a>
             </div>
 
@@ -55,11 +53,9 @@ Webpage built and maintained by Harry Minsky and Joey Kinnan (c) 2023
 
             </div>
 
-            <div class="text">
+            <div class="imgFrameFlip">
                 <a href="redirect.html">
-                    <marquee behavior="scroll" direction="up">
-                        <img src="img/punchlove_logo_victoriawinter_bot.png" width="100%" height="100%" />
-                    </marquee>
+                    <img src="img/gif/birdsong-square.gif" width="100%" height="100%" />
                 </a>
 
             </div>
