--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,14 @@
 
 <body>
     <div class="continue" style="position: relative;">
-        <img src="img/punchlove_logo_victoriawinter.png" style="height:50px; margin-right:5vh;" />
+        <img src="img/gif/punchlove-vhs.gif" />
+    </div>
+    <div class="continue" style="position: relative;">
+        <img src="img/gif/torch1.gif" style="height:100px; margin-right:5vh;" />
         <a href="https://linktr.ee/punchlovemusic" target="_blank">
-            <img src="img/gif/linktree.gif" />
+            <img src="img/gif/linktree.gif" style="margin-top: 4vh;" />
         </a>
-        <img src="img/punchlove_logo_victoriawinter.png" style="height:50px; margin-left:5vh;" />
+        <img src="img/gif/torch1.gif" style="height:100px; margin-left:5vh;" />
     </div>
 
     <div class="fill">
@@ -40,15 +43,15 @@
 
         <div class="linkWrapper" style="position: relative;">
             <button onclick="window.open('https://open.spotify.com/track/7DlxlzEqL01TZlQkZaeyyY?si=f1873624e8ff4fd5');"
-                    id="musicButton" style="background-color: black; color: green;">
+                    id="musicButton" style="background-color: black; color: green; left: 0%;">
                 SPOTIFY
             </button>
             <button onclick="window.open('https://youtu.be/t0xupGC7MbM');"
-                    id="vizButton">
+                    id="vizButton" style="left: 50%;">
                 MUSIC VIDEO
             </button>
             <button onclick="window.open('https://music.apple.com/us/album/screwdriver/1713374727?i=1713374734');"
-                    id="musicButton" style="color: red;">
+                    id="musicButton" style="color: red; left: 75%;">
                 APPLE MUSIC
             </button>
         </div>
