--- a/public/videos.html
+++ b/public/videos.html
@@ -2,41 +2,61 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>Punchlove's videos.</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Punchlove's videos.</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
+    <!--<link rel="stylesheet" href="styles/main.css">-->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
 
-  <style>
-      .parent {
-          margin: 1rem;
-          text-align: center;
-      }
-      .child {
-          display: inline-block;
-          padding: 1rem 1rem;
-          vertical-align: middle;
-      }
-  </style>
+    <style>
+        .parent {
+            margin: 1rem;
+            text-align: center;
+        }
+
+        .child {
+            display: inline-block;
+            padding: 1rem 1rem;
+            vertical-align: middle;
+        }
+        body {
+            background-color: blue;
+        }
+    </style>
 
 </head>
 
 <body>
 
+    <div class="parent">
+        <div class="child">            
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/t0xupGC7MbM"
+                    title="Punchlove - Screwdriver (Music Video)" frameborder="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
+
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/zpGjIeDqL4w"
+                    title="Punchlove - Dead Lands (Visualizer)" frameborder="1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
+    </div>
+    
     <div class="parent">
         <div class="child">
             <iframe width="650" height="400" src="https://www.youtube.com/embed/MR0qBlJnrT0"
