--- a/public/webcam.html
+++ b/public/webcam.html
@@ -13,10 +13,12 @@
         h1 {
             font-family: sans-serif;
             color: darkgreen;
+            background-color: white;
         }
 
         body {
             margin: 50px;
+            background-image: url("../img/textures/camera.jpg");
         }
 
         #container {
@@ -38,7 +40,7 @@
 </head>
 
 <body>
-    <h1>This is a mirror.</h1>
+    <h1>a mirror.</h1>
 
     <button id="greyscale" style="background-color: darkgray; margin: 5px;">old-school</button>
     <button id="negative" style="background-color: darkgray; margin: 5px;">negative</button>
