--- a/public/twitter.html
+++ b/public/twitter.html
@@ -37,6 +37,7 @@
         <div class="iphone-container">
             <div class="iphone-frame">
                 <img src="img/broken.png" width="375px" height="667px" />
+                <img src="img/gif/gears.gif" style="top: 50vh; right: 20vh;"/>
               <!--
               <div class="twitter-container">
                 <a id="twitter" class="twitter-timeline" data-theme="dark" href="https://twitter.com/punchlovemusic?ref_src=twsrc%5Etfw">Tweets by punchlovemusic</a>
@@ -49,11 +50,11 @@
     <!-- </div> -->
 
     <div class="sidetext" style="position: fixed; top: 0; left: 0;">
-        <marquee direction="down" style="height:1000px"><p>twitter dot com</p><p>twitter dot com</p><p>twitter dot com</p></marquee>
+        <marquee direction="down" style="height:1000px"><p>R.I.P. twitter dot com </p><p>R.I.P. twitter dot com </p><p>R.I.P. twitter dot com </p></marquee>
     </div>
 
     <div class="sidetext" style="position: fixed; top: 0; left: 80%">
-        <marquee direction="up" style="height:1000px"><p>twitter dot com</p><p>twitter dot com</p><p>twitter dot com</p></marquee>
+        <marquee direction="up" style="height:1000px"><p>r.i.p. twitter dot com </p><p>r.i.p. twitter dot com </p><p>r.i.p. twitter dot com </p></marquee>
     </div>
 
     <script defer src="./scripts/twitter.js"></script>
