--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,24 @@
 </head>
 
 <body>
-    <div class="continue" style="position: relative;">
-        <img src="img/gif/punchlove-vhs.gif" />
+    <div class="cover2" style="position: relative;">
+        <img id="title" src="img/gif/punchlove-vhs.gif" />
     </div>
+
     <div class="continue" style="position: relative;">
-        <img src="img/gif/torch1.gif" style="height:100px; margin-right:5vh;" />
+        <img id="icon" src="img/gif/torch1.gif" style="height:100px; margin-right:5vh;" />
         <a href="https://linktr.ee/punchlovemusic" target="_blank">
-            <img src="img/gif/linktree.gif" style="margin-top: 4vh;" />
+            <img id="title" src="img/gif/linktree.gif" style="margin-top: 4vh;" />
         </a>
-        <img src="img/gif/torch1.gif" style="height:100px; margin-left:5vh;" />
+        <img id="icon" src="img/gif/torch1.gif" style="height:100px; margin-left:5vh;" />
     </div>
 
     <div class="fill">
+        
+
         <div class="cover2" style="position: relative;">
             <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
-
             <p>Screwdriver -- New Single Out Now!</p>
-
-
         </div>
 
         <div class="linkWrapper" style="position: relative;">
@@ -70,7 +70,7 @@
                         Preorder <i>Channels</i> Here
                     </button>
                 </div>
-            </div>            
+            </div>
         </div>
 
         <div class="fill">
@@ -96,7 +96,7 @@
             </div>
         </div>
 
-                
+
     </div>
 
 
