--- a/public/videos.html
+++ b/public/videos.html
@@ -26,7 +26,6 @@
             margin: 1rem;
             text-align: center;
         }
-
         .child {
             display: inline-block;
             padding: 1rem 1rem;
@@ -34,6 +33,11 @@
         }
         body {
             background-color: blue;
+        }
+        @media (max-width: 725px) {
+            body {
+                zoom: 0.5;
+            }
         }
     </style>
 
