--- a/public/videos.html
+++ b/public/videos.html
@@ -16,30 +16,11 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <!--<link rel="stylesheet" href="styles/main.css">-->
+    <link rel="stylesheet" href="styles/videos.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <meta name="theme-color" content="#fafafa">
 
-    <style>
-        .parent {
-            margin: 1rem;
-            text-align: center;
-        }
-        .child {
-            display: inline-block;
-            padding: 1rem 1rem;
-            vertical-align: middle;
-        }
-        body {
-            background-color: blue;
-        }
-        @media (max-width: 725px) {
-            body {
-                zoom: 0.5;
-            }
-        }
-    </style>
 
 </head>
 
@@ -63,15 +44,15 @@
     
     <div class="parent">
         <div class="child">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/MR0qBlJnrT0"
-                    title="Punchlove - &quot;Guilt&quot; Live at the Mercury Lounge in NYC 3/8/23" frameborder="1"
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/5pDEbQ0Y0aY" 
+                    title="Punchlove - Screwdriver live @ Trans-Pecos 1/20/24" frameborder="1" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
         </div>
 
         <div class="child">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/UPZpV2SfDHM"
-                    title="Punchlove - “i” &amp; “* Screwdriver” (LIVE @ Mercury Lounge New York NYC USA 8 March 2023)" frameborder="1"
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/MR0qBlJnrT0"
+                    title="Punchlove - &quot;Guilt&quot; Live at the Mercury Lounge in NYC 3/8/23" frameborder="1"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
         </div>
