--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,14 @@
         <img id="icon" src="img/gif/torch1.gif" style="height:100px; margin-left:5vh;" />
     </div>
 
+    <div class="cover2" style="position: relative;">
+        <button onclick="window.open('https://www.seetickets.us/event/punchlove/586847');" style="height: 300%;">
+            Album Release Show February 28th -- TICKETS
+        </button>
+    </div>
+
     <div class="fill">
-        
+
 
         <div class="cover2" style="position: relative;">
             <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
@@ -118,6 +124,7 @@
     </script>
     <script src="https://www.google-analytics.com/analytics.js" async></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script defer src="./scripts/collapsible.js"></script>
 
 
 </body>
