--- a/public/index.html
+++ b/public/index.html
@@ -39,51 +39,74 @@
         </button>
     </div>
 
-    <div class="fill">
+    
 
+    <div class="wrapperWrapper" style="position: relative;">
 
-        <div class="cover2" style="position: relative;">
-            <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
-            <p>Screwdriver -- New Single Out Now!</p>
+        <div class="fill">
+            <div class="cover2" style="position:relative;">
+                <img id="albumArt" src="img/Guilt_Single_Digital.png" />
+                <p>Guilt -- New Single Out Now</p>
+            </div>
+
+            <div class="linkWrapper" style="position:relative;">
+                <button onclick="window.open('https://open.spotify.com/track/1SvFhUMbsHWyAQR1ZNCiV1?si=f3174e1395904db4');"
+                        id="musicButton" style="background-color: black; color: green; left: 0%;">
+                    SPOTIFY
+                </button>
+                <button onclick="window.open('https://youtu.be/uIAbUL_XPqM');"
+                        id="vizButton" style="left: 50%;">
+                    MUSIC VIDEO
+                </button>
+                <button onclick="window.open('https://music.apple.com/us/album/guilt/1713374727?i=1713375049');"
+                        id="musicButton" style="color: red; left: 75%;">
+                    APPLE MUSIC
+                </button>
+            </div>
         </div>
 
-        <div class="linkWrapper" style="position: relative;">
-            <button onclick="window.open('https://open.spotify.com/track/7DlxlzEqL01TZlQkZaeyyY?si=f1873624e8ff4fd5');"
-                    id="musicButton" style="background-color: black; color: green; left: 0%;">
-                SPOTIFY
-            </button>
-            <button onclick="window.open('https://youtu.be/t0xupGC7MbM');"
-                    id="vizButton" style="left: 50%;">
-                MUSIC VIDEO
-            </button>
-            <button onclick="window.open('https://music.apple.com/us/album/screwdriver/1713374727?i=1713374734');"
-                    id="musicButton" style="color: red; left: 75%;">
-                APPLE MUSIC
-            </button>
+        <div class="fill">
+            <div class="cover2" style="position: relative;">
+                <img id="albumArt" src="img/Channels_AlbumCover.png" />
+
+                <button onclick="window.open('https://punchlove.bandcamp.com/album/channels');"
+                        id="linkButton">
+                    PRE-ORDER <i>CHANNELS</i>
+                </button>                                                              
+            </div>
         </div>
+
     </div>
 
     <div class="wrapperWrapper" style="position: relative;">
 
         <div class="fill">
-            <div class="cover" style="position: relative;">
-                <img id="albumArt" src="img/Channels_AlbumCover.png" />
+            <div class="cover2" style="position: relative;">
+                <img id="albumArt" src="img/Screwdriver_Single_Digital.png" />
+                <p>Screwdriver</p>
+            </div>
 
-                <!--<p><i>Screwdriver</i></p>-->
-                <div class="linkWrapper" style="position: relative;">
-                    <button onclick="window.open('https://punchlove.bandcamp.com/album/channels');"
-                            id="vizButton">
-                        Preorder <i>Channels</i> Here
-                    </button>
-                </div>
+            <div class="linkWrapper" style="position: relative;">
+                <button onclick="window.open('https://open.spotify.com/track/7DlxlzEqL01TZlQkZaeyyY?si=f1873624e8ff4fd5');"
+                        id="musicButton" style="background-color: black; color: green; left: 0%;">
+                    SPOTIFY
+                </button>
+                <button onclick="window.open('https://youtu.be/t0xupGC7MbM');"
+                        id="vizButton" style="left: 50%;">
+                    MUSIC VIDEO
+                </button>
+                <button onclick="window.open('https://music.apple.com/us/album/screwdriver/1713374727?i=1713374734');"
+                        id="musicButton" style="color: red; left: 75%;">
+                    APPLE MUSIC
+                </button>
             </div>
         </div>
 
         <div class="fill">
-            <div class="cover" style="position: relative;">
+            <div class="cover2" style="position: relative;">
                 <img id="albumArt" src="img/DeadLands_Single_Digital.png" />
 
-                <p>Dead Lands --- Out Now!</p>
+                <p>Dead Lands</p>
             </div>
 
             <div class="linkWrapper" style="position: relative;">
@@ -102,9 +125,7 @@
             </div>
         </div>
 
-
     </div>
-
 
 
     <div class="continue" style="position: relative;">
