--- a/public/index (2).html
+++ b/public/index (2).html
@@ -27,14 +27,8 @@
 
     <div class="continue" style="position: relative;">
         <img id="icon" src="img/gif/torch1.gif" style="height:100px; margin-right:5vh;" />
-        <a id="heada" href="https://linktr.ee/punchlovemusic" target="_blank">
-            <img id="head" src="img/gif/linktree.gif" />
-        </a>
-        <a id="heada" href="#tour">
-            <img id="head" src="img/gif/tour.gif" />
-        </a>
-        <a id="heada" href="redirect.html">
-            <img id="head" src="img/gif/continue.gif" />
+        <a href="https://linktr.ee/punchlovemusic" target="_blank">
+            <img id="title" src="img/gif/linktree.gif" style="margin-top: 4vh;" />
         </a>
         <img id="icon" src="img/gif/torch1.gif" style="height:100px; margin-left:5vh;" />
     </div>
@@ -138,62 +132,6 @@
         <a href="frontPage.html">
             <img src="img/gif/continue.gif" />
         </a>
-    </div>
-
-    <p id="tour">Tour Area</p>
-    <div class="tour" style="position: relative;">
-        <div class="column">
-            <p>Wed Feb 28</p>
-            <p>Thu Mar 7</p>
-            <p>Fri Mar 8</p>
-            <p>Sat Mar 9</p>
-            <p>Sun Mar 10</p>
-            <p>Mon Mar 11</p>
-            <p>Thu Mar 14</p>
-            <p>Fri Mar 15</p>
-            <p>Sat Mar 16</p>
-            <p>Sun Mar 17</p>
-            <p>Mon Mar 18</p>
-            <p>Wed Mar 20</p>
-            <p>Thu Mar 21</p>
-            <p>Fri Mar 22</p>
-            <p>Sun Mar 24</p>
-        </div>
-        <div class="column">
-            <p>Brooklyn, NY</p>
-            <p>Richmona, VA</p>
-            <p>Asheville, NC</p>
-            <p>Atlanta, GA</p>
-            <p>Memphis, TN</p>
-            <p>New Orleans, LA</p>
-            <p>Austin, TX</p>
-            <p>Austin, TX</p>
-            <p>Oklahoma City, OK</p>
-            <p>Tulsa, OK</p>
-            <p>Kansas City, MO</p>
-            <p>Chicago, IL</p>
-            <p>Kent, OH</p>
-            <p>Pittsburgh, PA</p>
-            <p>Philadelphia, PA</p>
-        </div>
-        <div class="column">
-            <p>Baby's All Right</p>
-            <p>Cobra Cabana</p>
-            <p>Static Age Records</p>
-            <p>Inner Space</p>
-            <p>Hi-Tone Café</p>
-            <p>The Goat</p>
-            <p>SX</p>
-            <p>Spite Fest</p>
-            <p>Resonant Head</p>
-            <p>Noise Town</p>
-            <p>Farewell</p>
-            <p>Cobra Lounge</p>
-            <p>Zephyr</p>
-            <p>Government Center</p>
-            <p>MoMA 2</p>
-        </div>
-        
     </div>
 
 
