--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <img id="title" src="img/gif/punchlove-vhs.gif" />
     </div>
 
-    <div class="continue" style="position: relative;">
+    <div class="headerrr" style="position: relative;">
         <img id="icon" src="img/gif/torch1.gif" style="height:100px; margin-right:5vh;" />
         <a id="heada" href="https://linktr.ee/punchlovemusic" target="_blank">
             <img id="head" src="img/gif/linktree.gif" />
