--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,8 @@
             <p>Sat Mar 9</p>
             <p>Sun Mar 10</p>
             <p>Mon Mar 11</p>
+            <p>Wed Mar 13</p>
+            <p>Wed Mar 13</p>
             <p>Thu Mar 14</p>
             <p>Fri Mar 15</p>
             <p>Sat Mar 16</p>
@@ -168,6 +170,8 @@
             <p>New Orleans, LA</p>
             <p>Austin, TX</p>
             <p>Austin, TX</p>
+            <p>Austin, TX</p>
+            <p>Austin, TX</p>
             <p>Oklahoma City, OK</p>
             <p>Tulsa, OK</p>
             <p>Kansas City, MO</p>
@@ -183,8 +187,10 @@
             <p>Inner Space</p>
             <p>Hi-Tone Café</p>
             <p>The Goat</p>
-            <p>SX</p>
-            <p>Spite Fest</p>
+            <p>The Side Bar</p>
+            <p>Swamp House</p>
+            <p>Dedstrange x Vancerts</p>
+            <p>For Spite Fest</p>
             <p>Resonant Head</p>
             <p>Noise Town</p>
             <p>Farewell</p>
@@ -193,7 +199,25 @@
             <p>Government Center</p>
             <p>MoMA 2</p>
         </div>
-        
+        <div class="column" style="position:relative;">
+            <p><a href="https://www.seetickets.us/event/punchlove/586847" target="_blank">TICKETS</a></p>
+            <p><a href="https://www.instagram.com/p/C3Q-LzsMQCA/?img_index=2" target="_blank">DETAILS</a></p>
+            <p><a href="https://www.staticagenc.com/events/punchlove-trust-blinks-dish-soot" target="_blank">DETAILS</a></p>
+            <p><a href="https://www.instagram.com/p/C3Q-LzsMQCA/?img_index=4" target="_blank">DETAILS</a></p>
+            <p><a href="https://www.etix.com/ticket/p/96053695/dead-tooth-puchlove-highmothcat-alicja-n-friends-the-current-situation-small-roomdownstairs-memphis-the-hi-tone-cafe?partner_id=100" target="_blank">TICKETS</a></p>
+            <p style="background-color:black">_</p>
+            <p style="background-color:black">_</p>
+            <p style="background-color:black">_</p>
+            <p><a href="https://www.instagram.com/p/C3NpeHIu-pH/" target="_blank">DETAILS</a></p>
+            <p><a href="https://www.instagram.com/p/C3YEazSuCb0/" target="_blank">DETAILS</a></p>
+            <p><a href="https://www.prekindle.com/promo/id/532452771015978205" target="_blank">TICKETS</a></p>
+            <p style="background-color:black">_</p>
+            <p><a href="https://www.instagram.com/p/C3k0MWBrzsO/" target="_blank">DETAILS</a></p>
+            <p><a href="https://link.dice.fm/Jed5d52cc811" target="_blank">TICKETS</a></p>
+            <p style="background-color:black">_</p>
+            <p style="background-color:black">_</p>
+            <p style="background-color:black">_</p>
+        </div>        
     </div>
 
 
