--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
         <div class="fill">
             <div class="cover2" style="position: relative;">
-                <a href="https://punchlove.bandcamp.com/album/channels" target="_blank"><img id="albumArt" src="img/gif/AlbumCover.gif" /></a>           
+                <a href="https://punchlove.bandcamp.com/album/channels" target="_blank"><img id="albumArt" src="img/Channels_AlbumCover.png" /></a>           
             </div>
             <button onclick="window.open('https://open.spotify.com/album/0fROkij27KLAQl0uUTFS2e?si=jhxa-k51QxCaQ2skuqaflQ');" 
                     style="width:50%; background-color:forestgreen; font-family:'VCR OSD Mono'; font-size:larger; cursor:pointer; justify-content:center;">
