--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
         <div class="fill">
             <div class="cover2" style="position: relative;">
-                <a href="https://punchlove.bandcamp.com/album/channels" target="_blank"><img id="albumArt" src="img/Channels_AlbumCover.png" /></a>           
+                <a href="https://punchlove.bandcamp.com/album/channels" target="_blank"><img id="albumArt" src="img/gif/AlbumCover.gif" /></a>           
             </div>
             <button onclick="window.open('https://open.spotify.com/album/0fROkij27KLAQl0uUTFS2e?si=jhxa-k51QxCaQ2skuqaflQ');" 
                     style="width:50%; background-color:forestgreen; font-family:'VCR OSD Mono'; font-size:larger; cursor:pointer; justify-content:center;">
@@ -126,18 +126,18 @@
             <p><a href="https://www.staticagenc.com/events/punchlove-trust-blinks-dish-soot" target="_blank">DETAILS</a></p>
             <p><a href="https://www.instagram.com/p/C3Q-LzsMQCA/?img_index=4" target="_blank">DETAILS</a></p>
             <p><a href="https://www.etix.com/ticket/p/96053695/dead-tooth-puchlove-highmothcat-alicja-n-friends-the-current-situation-small-roomdownstairs-memphis-the-hi-tone-cafe?partner_id=100" target="_blank">TICKETS</a></p>
-            <p style="background-color:black">_</p>
-            <p style="background-color:black">_</p>
-            <p style="background-color:black">_</p>
+            <p style="background-color:blue; color:blue">_</p>
+            <p style="background-color: blue; color: blue">_</p>
+            <p style="background-color: blue; color: blue">_</p>
             <p><a href="https://www.instagram.com/p/C3NpeHIu-pH/" target="_blank">DETAILS</a></p>
             <p><a href="https://www.instagram.com/p/C3YEazSuCb0/" target="_blank">DETAILS</a></p>
             <p><a href="https://www.prekindle.com/promo/id/532452771015978205" target="_blank">TICKETS</a></p>
-            <p style="background-color:black">_</p>
+            <p style="background-color: blue; color: blue">_</p>
             <p><a href="https://www.instagram.com/p/C3k0MWBrzsO/" target="_blank">DETAILS</a></p>
             <p><a href="https://link.dice.fm/Jed5d52cc811" target="_blank">TICKETS</a></p>
-            <p style="background-color:black">_</p>
-            <p style="background-color:black">_</p>
-            <p style="background-color:black">_</p>
+            <p style="background-color: blue; color: blue">_</p>
+            <p style="background-color: blue; color: blue">_</p>
+            <p style="background-color: blue; color: blue">_</p>
         </div>        
     </div>
 
