last one 4tnite

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                 <a href="https://punchlove.bandcamp.com/album/channels" target="_blank"><img id="albumArt" src="img/gif/AlbumCover.gif" /></a>           
             </div>
             <button onclick="window.open('https://open.spotify.com/album/0fROkij27KLAQl0uUTFS2e?si=jhxa-k51QxCaQ2skuqaflQ');" 
-                    style="width:50%; background-color:forestgreen; font-family:'VCR OSD Mono'; font-size:larger; cursor:pointer; justify-content:center;">
+                    style="width:100%; background-color:forestgreen; font-family:'VCR OSD Mono'; font-size:xx-large; cursor:pointer; justify-content:center;">
                 green button. (spotify)
             </button>
         </div>
