--- a/public/videos.html
+++ b/public/videos.html
@@ -27,7 +27,24 @@
 <body>
 
     <div class="parent">
-        <div class="child">            
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/PRoOHehwHWw" 
+                    title="Punchlove - Birdsong (Music Video)" frameborder="1" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
+
+        <div class="child">
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/uIAbUL_XPqM" 
+                    title="Punchlove - Guilt (Music Video)" frameborder="1" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+        </div>
+      
+    </div>
+
+    <div class="parent">
+        <div class="child">
             <iframe width="650" height="400" src="https://www.youtube.com/embed/t0xupGC7MbM"
                     title="Punchlove - Screwdriver (Music Video)" frameborder="1"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
@@ -41,34 +58,18 @@
             </iframe>
         </div>
     </div>
-    
-    <div class="parent">
-        <div class="child">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/5pDEbQ0Y0aY" 
-                    title="Punchlove - Screwdriver live @ Trans-Pecos 1/20/24" frameborder="1" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-            </iframe>
-        </div>
-
-        <div class="child">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/MR0qBlJnrT0"
-                    title="Punchlove - &quot;Guilt&quot; Live at the Mercury Lounge in NYC 3/8/23" frameborder="1"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
-            </iframe>
-        </div>
-    </div>
 
     <div class="parent">
         <div class="child">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/CDaL4_rhaok"
-                    title="fistf**k live from seCret loCation 02-25-2023" frameborder="1"
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/5pDEbQ0Y0aY"
+                    title="Punchlove - Screwdriver live @ Trans-Pecos 1/20/24" frameborder="1"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
         </div>
 
         <div class="child">
-            <iframe width="650" height="400" src="https://www.youtube.com/embed/DAT5R0Z48fA"
-                    title="[shoegaze] punchlove - wnyu &quot;alive in the basement&quot; 03.28.2022" frameborder="1"
+            <iframe width="650" height="400" src="https://www.youtube.com/embed/CDaL4_rhaok" 
+                    title="fistf**k live from seCret loCation 02-25-2023" frameborder="1" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
         </div>
